Fixed add item button so that the users inputed items go to the right account inestead of the hard coded user.